  --thread=<paradigm> flags for the instrumenter to select the
  multi-process paradigm and the threading paradigm. The old options
  --mpi, --nompi, --openmp, --noopenmp are marked as deprecated and no
  longer documented.
- Implemented the possibility to write CUBE profiles with the tupel
  values containing sum, minimum, maximum, number of samples, sum of
  squares.

------------------- Upcoming version 1.2.2 ---------------------------

- The Fortran Cray compiler instrumentation did not create an exit event.
  Thus, we add an exit on Score-P finalization.
- Removed remark of the intel compiler during instrumentation that VT_ROOT
  is not set, if preprocessing was used.
- MPI parallel measurements with just one process were fixed.
- Fixed a race condition during initialization of the TRACE_BUFFER_FLUSH
  region, that could lead to incomplete profiles if a user measures
  a hybrid (MPI + OpenMP) applications and enables profiling and tracing
  at the same time.

------------------- Released version 1.2.1 ---------------------------

- Allow configuration without support for the MPI programming model by
  specifying --without-mpi on the configure line.
- Abort during instrumentation with a meaningful error message if
  a user requests MPI but the Score-P installation does not support MPI
- On Blue Gene/Q, detect PAMI library at configure time. The location
  and names of the PAMI files changes during a system upgrade. Search
  all known directories and library names.
- Improve --with-custom-compilers, customization files are now
  recognized also in the build directory (see INSTALL).
- On SGI MPT systems, or more generally on systems that don't use
  compiler wrappers for building MPI programs, improve the automatic
  detection of the MPI programming paradigm during instrumentation.
- Abort with an error message during instrumentation if the user wants
  to build a shared library with static Score-P libraries.